doc: Update for 0.4.0-beta2